--- a/escom-bpm-web/src/main/webapp/view/docs/remarks/remark-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/remarks/remark-card.xhtml
@@ -17,7 +17,7 @@
                 </p:inputText>                
                 
                 <p:outputLabel value="#{bundle.Remark}:" indicateRequired="true" />
-                <p:inputTextarea id="nameItem" value="#{_bean.editedItem.name}" rows="3" autoResize="true"
+                <p:inputTextarea id="nameItem" value="#{_bean.editedItem.content}" rows="3" autoResize="true"
                              styleClass="ui-grid-col-12"
                              onkeypress="checkEsc();"
                              onchange="return itemChange = 1;"
