--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -8,6 +8,10 @@
 
     <ui:param name="_bean" value="#{attacheBean}"/>
 
+    <ui:define name="customStyleCSS">
+        <h:outputStylesheet library="css" name="remarks.css"/>    
+    </ui:define>    
+    
     <ui:define name="centerContent">   
         #{remarkCardBean.onBeforeOpenCard()} 
         <script>
@@ -23,62 +27,59 @@
                 };
             }
         </script> 
+        
+        <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" > 
+            <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
+                <f:facet name="header">
+                    #{_bean.getFormHeader()}
+                </f:facet>
+                <f:facet name="actions">
+                    <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
+                                   actionListener="#{_bean.onCancelItemSave()}"
+                                   onclick="var btnSave = document.getElementById('mainFRM:btnSaveChange');
+                                       if (btnSave) {
+                                           btnSave.click();
+                                       }
+                                       sendFormSize('#{_bean.getFormName()}');
+                                           if (itemChange == 1) {
+                                               onChangeItem();
+                                           }">
+                        <h:outputText styleClass="ui-icon ui-icon-closethick" />
+                    </p:commandLink>
+                </f:facet>
+                
+                <pe:slideout title="#{bundle.Remarks}" icon="ico_done-16" location="right" widgetVar="slideoutHover"
+                            rendered="#{remarkCardBean.isRemarkTabShow()}"
+                            handleStyleClass="complete_hover-handle" 
+                            panelStyleClass="complete_hover-panel" showOn="hover" offset="70px">  
+                    <p:panelGrid  styleClass="ui-noborder">  
+                        <p:row>  
+                            <p:column>  
+                            <ui:include src="/view/docs/remarks/remarks-panel.xhtml"/>
+                            </p:column>
+                        </p:row>
+                    </p:panelGrid>  
+                </pe:slideout> 
+                
+                <p:commandButton id="btnSaveChange" style="display: none;" actionListener="#{remarkCardBean.onSaveChange()}"/>    
 
-        <pe:layout fullPage="true" style="font-size: 80%;" stateCookie="true">
+                <pe:documentViewer value="#{attacheBean.content}" rendered="#{attacheBean.content != null}" height="800"  />
 
-            <pe:layoutPane id="east" position="east" rendered="#{remarkCardBean.isRemarkTabShow()}" resizable="true" size="30%">
-                <h:form id="eastFRM" style="font-size: 90%;  height: 100%;">
-                    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12" style="height: 100%;">
-                        <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
-                            <p:autoUpdate />
-                        </p:messages>
-                        <ui:include src="/view/docs/remarks/remarks-panel.xhtml"/>
-                    </p:panelGrid>            
-                    <ui:include src="/view/common/confirm-dlg.xhtml"/>
-                    <p:commandButton id="btnSaveChange" style="display: none;" actionListener="#{remarkCardBean.onSaveChange()}"/>
-                </h:form>
-            </pe:layoutPane>
-
-            <pe:layoutPane id="center" position="center" resizable="true" size="70%">
-                <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" > 
-                    <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
-                        <f:facet name="header">
-                            #{_bean.getFormHeader()}
-                        </f:facet>
-                        <f:facet name="actions">
-                            <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
-                                           actionListener="#{_bean.onCancelItemSave()}"
-                                           onclick="var btnSave = document.getElementById('eastFRM:btnSaveChange');
-                                               if (btnSave) {
-                                                   btnSave.click();
-                                               }
-                                               sendFormSize('#{_bean.getFormName()}');
-                                                   if (itemChange == 1) {
-                                                       onChangeItem();
-                                                   }">
-                                <h:outputText styleClass="ui-icon ui-icon-closethick" />
-                            </p:commandLink>
-                        </f:facet>
-                        
-                        <pe:documentViewer value="#{attacheBean.content}" rendered="#{attacheBean.content != null}" height="800"  />
-                        
-                        <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12">                        
-                            <p:panel styleClass="ui-grid-col-12" style="height: 100%;">
-                                <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
-                                    <p:graphicImage name="/images/escom_logo.jpg"  /> 
-                                    <h:panelGroup styleClass="ui-grid-col-12">
-                                        <h3>
-                                            #{bundle.DocumentPreviewIisNotAvailable}
-                                        </h3>
-                                    </h:panelGroup>
-                                </p:panelGrid>            
-                            </p:panel>
-                        </p:panelGrid>
-                    </p:panel>                                        
-                    <p:remoteCommand name="formSize" immediate="true" actionListener="#{sessionBean.onFormSize()}" />
-                </h:form>
-            </pe:layoutPane>
-        </pe:layout>
+                <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
+                    <p:panel styleClass="ui-grid-col-12" style="height: 100%;">
+                        <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
+                            <p:graphicImage name="/images/escom_logo.jpg"  /> 
+                            <h:panelGroup styleClass="ui-grid-col-12">
+                                <h3>
+                                    #{bundle.DocumentPreviewIisNotAvailable}
+                                </h3>
+                            </h:panelGroup>
+                        </p:panelGrid>            
+                    </p:panel>
+                </p:panelGrid>
+            </p:panel>
+            <p:remoteCommand name="formSize" immediate="true" actionListener="#{sessionBean.onFormSize()}" />
+        </h:form>
     </ui:define>
 
 </ui:composition>
